--- a/Resources/Stylesheet.xaml
+++ b/Resources/Stylesheet.xaml
@@ -100,6 +100,7 @@
     <Style x:Key="lblOverskrift" TargetType="Label">
         <Setter Property="FontSize" Value="25"/>
         <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Width" Value="200"/>
     </Style>
     <!--#endregion-->
