--- a/Views/EUVView.xaml
+++ b/Views/EUVView.xaml
@@ -5,15 +5,27 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GFElevInterview.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="1350" d:DesignWidth="800" Background="White">
+             d:DesignHeight="1450" d:DesignWidth="800" Background="White">
     <!--Default Height "450" Width "800"-->
     <Grid>
-        <StackPanel>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.02*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="0.02*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel  Grid.Column="1">
             <Label Content="Interview guide til RKV elever"  FontSize="18" FontWeight="Bold" FontStyle="Italic"/>
             <Border BorderBrush="Gray" BorderThickness="1" x:Name="bdrEducation">
                 <StackPanel>
                     <Label  Content="Hvilken uddannelse ønske du at påbegynde?" FontSize="16" HorizontalAlignment="Center"/>
                     <ComboBox x:Name="cmbEducation" Width="240"/>
+                </StackPanel>
+            </Border>
+            <Separator Style="{StaticResource SepSpaceH}"/>
+            <Border Style="{StaticResource bdrEUV2}" x:Name="bdrAdresse">
+                <StackPanel>
+                    <TextBlock TextWrapping="WrapWithOverflow" Text="Hvilken adresse ønske du at starte på?" FontSize="16" HorizontalAlignment="Center"/>
+                    <ComboBox x:Name="cmbUddannelse" Width="160"/>
                 </StackPanel>
             </Border>
             <Separator Style="{StaticResource SepSpaceH}"/>
@@ -127,14 +139,7 @@
                 </StackPanel>
             </Border>
             <Separator Style="{StaticResource SepSpaceH}"/>
-            <Border Style="{StaticResource bdrEUV2}" x:Name="bdrAdresse">
-                <StackPanel>
-                    <TextBlock TextWrapping="WrapWithOverflow" Text="Hvilken adresse ønske du at starte på?" FontSize="16" HorizontalAlignment="Center"/>
-                    <ComboBox x:Name="cmbUddannelse" Width="160"/>
-                </StackPanel>
-            </Border>
-            <Separator Style="{StaticResource SepSpaceH}"/>
-            <Border Style="{StaticResource bdrEUV2}" x:Name="bdrSps" Height="103">
+            <Border Style="{StaticResource bdrEUV2}" x:Name="bdrSps" Height="70">
                 <StackPanel x:Name="stackSps">
                     <TextBlock TextWrapping="WrapWithOverflow" Text="Har du modtaget særlige støtte eller ønsker du at søge om særlige pædagogiske støtte?" FontSize="16" HorizontalAlignment="Center"/>
                     <DockPanel Style="{StaticResource docKnapH}">
