--- a/Views/LederView.xaml
+++ b/Views/LederView.xaml
@@ -8,14 +8,16 @@
         d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="0.02*"/>
+            <ColumnDefinition Width="1.15*"/>
+            <ColumnDefinition Width="0.01*"/>
             <ColumnDefinition Width="0.15*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
             <RowDefinition Height="330"/>
         </Grid.RowDefinitions>
-        <Grid Width="450" HorizontalAlignment="Right">
+        <Grid Width="450" HorizontalAlignment="Right" Grid.Column="1">
             <DockPanel Height="30" VerticalAlignment="Top">
                 <Button x:Name="btnRKV" Content="RKV" Click="RKV_Click" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource btnShow}"/>
                 <Separator Style="{StaticResource SepSpaceW}"/>
@@ -31,14 +33,13 @@
                 <TextBox Width="160" Height="20" x:Name="Sogefelt" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left"/>
             </DockPanel>
         </Grid>
-        
-        
-        <ComboBox Width="200" Height="25" x:Name="cmbSchool" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="0" Grid.Row="0" SelectionChanged="SkoleDropDown_SelectionChanged"/>
+
+        <ComboBox Width="200" Height="25" x:Name="cmbSchool" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0" SelectionChanged="SkoleDropDown_SelectionChanged"/>
              
-        <Border Grid.Column="1" Grid.Row="0" Background="#495057" BorderThickness="5" BorderBrush="Gray">
+        <Border Grid.Column="3" Grid.Row="0" Background="#495057" BorderThickness="5" BorderBrush="Gray">
             <TextBlock  Text="Admin" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Border>
-        <StackPanel Background="#495057" Grid.Column="1" Grid.Row="1" VerticalAlignment="Stretch">
+        <StackPanel Background="#495057" Grid.Column="3" Grid.Row="1" VerticalAlignment="Stretch">
             <Separator Style="{StaticResource SepSpaceH}"/>
             <Button Content="Merit Export" Click="ExportMerit_Click" Style="{StaticResource btnAdmin}"/>
             <Separator Style="{StaticResource SepSpaceH}"/>
@@ -55,7 +56,7 @@
             <Button  Width="80" Height="20" x:Name="btnOpen_Merit" Content="Åben Merit" Click="Open_Merit_Click" IsEnabled="False"/>
         </StackPanel>
 
-        <DataGrid x:Name="gridElevTabel" AutoGenerateColumns="False" Grid.Column="0" Grid.Row="1" SelectionChanged="elevTabel_SelectionChanged" IsReadOnly="True" HorizontalAlignment="Center" VerticalAlignment="Center" Height="320" Width="650">
+        <DataGrid x:Name="gridElevTabel" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" SelectionChanged="elevTabel_SelectionChanged" IsReadOnly="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="CPR" Binding="{Binding cprNr}"/>
                 <DataGridTextColumn Header="Fornavn" Binding="{Binding fornavn}"/>
