--- a/Resources/Stylesheet.xaml
+++ b/Resources/Stylesheet.xaml
@@ -1,130 +1,129 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:GFElevInterview.Resources">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!-- #region BlanketView -->
     <Style x:Key="btnBase" TargetType="Button">
-        <Setter Property="Background" Value="Gray"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Height" Value="50"/>
-        <Setter Property="Width" Value="150"/>
-        <Setter Property="Foreground" Value="White"/>
-        <Setter Property="FontSize" Value="22"/>
+        <Setter Property="Background" Value="Gray" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Height" Value="50" />
+        <Setter Property="Width" Value="150" />
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="FontSize" Value="22" />
     </Style>
-    
+
     <Style x:Key="btnNavigate" TargetType="Button" BasedOn="{StaticResource btnBase}">
         <Setter Property="HorizontalAlignment" Value="Center" />
     </Style>
-    
+
     <!--#endregion-->
     <!--#region LederView-->
     <Style x:Key="btnShow" TargetType="Button">
-        <Setter Property="Height" Value="20"/>
-        <Setter Property="Width" Value="80"/>
-        <Setter Property="Grid.Column" Value="0"/>
-        <Setter Property="Grid.Row" Value="0"/>
+        <Setter Property="Height" Value="20" />
+        <Setter Property="Width" Value="80" />
+        <Setter Property="Grid.Column" Value="0" />
+        <Setter Property="Grid.Row" Value="0" />
     </Style>
     <Style x:Key="btnAdmin" TargetType="Button">
-        <Setter Property="Background" Value="Gray"/>
-        <Setter Property="Width" Value="80"/>
-        <Setter Property="Height" Value="40"/>
-        <Setter Property="FontSize" Value="13"/>
+        <Setter Property="Background" Value="Gray" />
+        <Setter Property="Width" Value="80" />
+        <Setter Property="Height" Value="40" />
+        <Setter Property="FontSize" Value="13" />
     </Style>
     <Style x:Key="btnAdminOpen" TargetType="Button">
-        <Setter Property="Background" Value="Gray"/>
-        <Setter Property="Width" Value="80"/>
-        <Setter Property="Height" Value="40"/>
-        <Setter Property="FontSize" Value="13"/>
+        <Setter Property="Background" Value="Gray" />
+        <Setter Property="Width" Value="80" />
+        <Setter Property="Height" Value="40" />
+        <Setter Property="FontSize" Value="13" />
     </Style>
     <!--#endregion-->
     <!--#region EUVView-->
     <Style x:Key="txtEUV" TargetType="TextBlock">
-        <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
-        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="TextWrapping" Value="WrapWithOverflow" />
+        <Setter Property="FontSize" Value="12" />
     </Style>
     <Style x:Key="bdrEUV" TargetType="Border">
-        <Setter Property="BorderBrush" Value="Gray"/>
-        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="Gray" />
+        <Setter Property="BorderThickness" Value="1" />
     </Style>
     <Style x:Key="bdrEUV2" TargetType="Border">
-        <Setter Property="BorderBrush" Value="Gray"/>
-        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="Gray" />
+        <Setter Property="BorderThickness" Value="1" />
     </Style>
     <Style x:Key="bdrSpace" TargetType="Border">
-        <Setter Property="Height" Value="10"/>
-        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Height" Value="10" />
+        <Setter Property="BorderThickness" Value="0" />
     </Style>
     <Style x:Key="rbnNej" TargetType="RadioButton">
-        <Setter Property="HorizontalAlignment" Value="Right"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Right" />
+        <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
     <!--#endregion-->
     <!--#region VisitationsView-->
     <Style x:Key="bdrVisitation" TargetType="Border">
-        <Setter Property="BorderBrush" Value="Gray"/>
-        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="Gray" />
+        <Setter Property="BorderThickness" Value="1" />
     </Style>
     <Style x:Key="labVisitation" TargetType="Label">
-        <Setter Property="FontSize" Value="17"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="FontStyle" Value="Italic"/>
+        <Setter Property="FontSize" Value="17" />
+        <Setter Property="FontWeight" Value="Bold" />
+        <Setter Property="FontStyle" Value="Italic" />
     </Style>
     <!--#endregion-->
     <!--#region MainWindow-->
     <Style x:Key="btnPanel" TargetType="Button">
-        <Setter Property="Background" Value="Gray"/>
-        <Setter Property="Height" Value="50"/>
-        <Setter Property="Foreground" Value="White"/>
-        <Setter Property="FontSize" Value="22"/>
+        <Setter Property="Background" Value="Gray" />
+        <Setter Property="Height" Value="50" />
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="FontSize" Value="22" />
     </Style>
     <Style x:Key="bdrMain" TargetType="Border">
-        <Setter Property="Background" Value="WhiteSmoke"/>
-        <Setter Property="BorderBrush" Value="Gray"/>
+        <Setter Property="Background" Value="WhiteSmoke" />
+        <Setter Property="BorderBrush" Value="Gray" />
     </Style>
     <!--#endregion-->
     <!--#region MeritView-->
     <Style x:Key="cmbFag" TargetType="ComboBox">
-        <Setter Property="Text" Value="A-G"/>
-        <Setter Property="Height" Value="20"/>
-        <Setter Property="Width" Value="120"/>
-        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="Text" Value="A-G" />
+        <Setter Property="Height" Value="20" />
+        <Setter Property="Width" Value="120" />
+        <Setter Property="FontSize" Value="12" />
     </Style>
     <Style x:Key="rbnValg" TargetType="RadioButton">
-        <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
     <Style x:Key="lblFag" TargetType="Label">
-        <Setter Property="FontSize" Value="13"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="FontSize" Value="13" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
     </Style>
     <Style x:Key="lblOverskrift" TargetType="Label">
-        <Setter Property="FontSize" Value="25"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Width" Value="200"/>
+        <Setter Property="FontSize" Value="25" />
+        <Setter Property="FontWeight" Value="Bold" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="Width" Value="200" />
     </Style>
     <!--#endregion-->
     <!--#region Blandet-->
     <Style x:Key="docKnapH" TargetType="DockPanel">
-        <Setter Property="Height" Value="32"/>
-        <Setter Property="Width" Value="130"/>
-        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Height" Value="32" />
+        <Setter Property="Width" Value="130" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
     </Style>
     <Style x:Key="bdrKnapW" TargetType="Border">
-        <Setter Property="Width" Value="40"/>
-        <Setter Property="Height" Value="10"/>
+        <Setter Property="Width" Value="40" />
+        <Setter Property="Height" Value="10" />
     </Style>
     <Style x:Key="SepSpaceW" TargetType="Separator">
-        <Setter Property="Width" Value="40"/>
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Padding" Value="0"/>
-        <Setter Property="Margin" Value="0"/>
+        <Setter Property="Width" Value="40" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Padding" Value="0" />
+        <Setter Property="Margin" Value="0" />
     </Style>
     <Style x:Key="SepSpaceH" TargetType="Separator">
-        <Setter Property="Height" Value="10"/>
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Padding" Value="0"/>
-        <Setter Property="Margin" Value="0"/>
+        <Setter Property="Height" Value="10" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Padding" Value="0" />
+        <Setter Property="Margin" Value="0" />
     </Style>
     <!--#endregion-->
 </ResourceDictionary>
