--- a/Views/LederView.xaml
+++ b/Views/LederView.xaml
@@ -49,7 +49,7 @@
             <Separator Style="{StaticResource SepSpaceH}" />
             <Button Content="Tilføj" x:Name="TilføjKnp" Click="TilføjKnp_Click" Style="{StaticResource btnAdmin}" />
             <Separator Style="{StaticResource SepSpaceH}" />
-            <Button Content="Reset" Style="{StaticResource btnAdmin}" />
+            <Button x:Name="btnReset" Content="Reset" Style="{StaticResource btnAdmin}" />
             <Separator Style="{StaticResource SepSpaceH}" />
             <Button Width="80" Height="20" x:Name="btnOpen_RKV" Content="Åben RKV" Click="Open_RKV_Click" IsEnabled="False" />
             <Separator Style="{StaticResource SepSpaceH}" />
