--- a/Views/LoginView.xaml
+++ b/Views/LoginView.xaml
@@ -23,7 +23,7 @@
             <Label Content="Kodeord" HorizontalAlignment="Center" />
             <PasswordBox x:Name="txtPassword" Width="250" Height="25" HorizontalAlignment="Center" BorderThickness="2" />
             <Separator Style="{StaticResource SepSpaceH}" />
-            <Button x:Name="btnLogin" Width="150" Height="20" Content="Log ind" Background="#42D4E4" Click="btnLogin_Click" />
+            <Button x:Name="btnLogin" Width="150" Height="20" Content="Log ind" Background="#42D4E4" Click="btnLogin_Click" IsDefault="True"/>
         </StackPanel>
     </Grid>
 </UserControl>
