--- a/Views/VejledningView.xaml
+++ b/Views/VejledningView.xaml
@@ -1,12 +1,11 @@
-﻿<UserControl x:Class="GFElevInterview.Views.MeritBlanketView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:GFElevInterview.Views"
-      mc:Ignorable="d" Background="White"
-      d:DesignHeight="450" d:DesignWidth="800">
-
+﻿<UserControl x:Class="GFElevInterview.Views.VejledningView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:GFElevInterview.Views"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800" Background="White">
     <Grid Margin="20">
 
         <Grid.ColumnDefinitions>
@@ -30,10 +29,10 @@
             </StackPanel>
 
         </Border >
-        
+
         <Border Grid.Row="1">
-                <StackPanel>
-                    <Label Content="Leder Guide" FontSize="25" HorizontalAlignment="Center"></Label>
+            <StackPanel>
+                <Label Content="Leder Guide" FontSize="25" HorizontalAlignment="Center"></Label>
                 <Button x:Name="buttonLeder" Height="30" Width="65"  ></Button>
             </StackPanel>
         </Border>
@@ -41,7 +40,7 @@
         <Border Grid.Row="2" Grid.Column="0">
             <Label Content="Credits!" FontSize="25" HorizontalAlignment="Center"></Label>
         </Border>
-        
+
         <Border Grid.Row="3" Grid.Column="0">
             <StackPanel>
                 <Label Content="Navn: Navn1" HorizontalAlignment="Center" FontSize="20"></Label>
@@ -49,7 +48,7 @@
                 <Label Content="Navn: Navn3" HorizontalAlignment="Center" FontSize="20"></Label>
                 <Label Content="Navn: Navn4" HorizontalAlignment="Center" FontSize="20"></Label>
             </StackPanel>
-            
+
         </Border>
     </Grid>
 </UserControl>
